--- a/qof/backend/Makefile.am
+++ b/qof/backend/Makefile.am
@@ -7,6 +7,9 @@
 #
 # HISTORY:
 # Created by Linas Vepstas <linas@linas.org> July 2004
+# Conditional DWI build: Neil Williams <linux@codehelp.co.uk>
+# QSF added: Neil Williams <linux@codehelp.co.uk> Dec 2004
+# Added -Werror Neil Williams <linux@codehelp.co.uk> August 05
 #
 
 if BUILD_DWI
@@ -21,4 +24,6 @@ DIST_SUBDIRS =  dwi file
  
 EXTRA_DIST =             \
 	README
+
+CFLAGS += -Werror
 
