--- a/qof/backend/file/Makefile.am
+++ b/qof/backend/file/Makefile.am
@@ -28,14 +28,18 @@ qsfschemadir = $(QSF_SCHEMA_DIR)
 qsfschema_DATA = \
         qsf-object.xsd.xml \
         qsf-map.xsd.xml \
-        pilot-qsf-GnuCashInvoice.xml
+  pilot-qsf-GnuCashInvoice.xml \
+  qsf-backend-v0.1.xml
 
 EXTRA_DIST = \
   $(qsfschema_DATA) \
   qsf-dir.h.in    \
+  backend-config.pl \
   qsf-xml.h
 
-CONFIG_CLEAN_FILES = qsf-dir.h
+CONFIG_CLEAN_FILES = \
+  qsf-dir.h \
+  qsf-backend-v0.1.xml
 
 qsf-dir.h: qsf-dir.h.in
 	rm -f $@.tmp
@@ -43,4 +47,10 @@ qsf-dir.h: qsf-dir.h.in
 		-e 's:@-QSF_SCHEMA_DIR-@:${QSF_SCHEMA_DIR}:g'
 	mv $@.tmp $@
 
-BUILT_SOURCES = qsf-dir.h
+qsf-backend-v0.1.xml: backend-config.pl
+	perl backend-config.pl > qsf-backend-v0.1.xml
+
+BUILT_SOURCES = \
+  qsf-dir.h \
+  qsf-backend-v0.1.xml
+
