--- a/qof/examples/Makefile.am
+++ b/qof/examples/Makefile.am
@@ -11,6 +11,8 @@ SUBDIRS = $(EXAMPLES) backend
 
 # SUBDIRS = gobject
 
+CFLAGS += -Werror
+
 test_book_merge_SOURCES = test-book-merge.c
 
 query_example_SOURCES = \
@@ -40,29 +42,63 @@ AM_CFLAGS =  \
   -I${top_srcdir}/qof \
   -I${top_srcdir}/backend/file \
   ${LIBXML2_CFLAGS} \
+  ${LIBGDA_CFLAGS} \
   ${GLIB_CFLAGS}
 
+if USE_LIBGDA
+test_qsf_LDADD = \
+  ${top_builddir}/backend/file/libqof-backend-qsf.la \
+  ${top_builddir}/qof/libqof.la           \
+  ${LIBXML2_LIBS} \
+  ${LIBGDA_LIBS} \
+  ${GLIB_LIBS}   \
+  -lltdl
+else
 test_qsf_LDADD = \
   ${top_builddir}/backend/file/libqof-backend-qsf.la \
   ${top_builddir}/qof/libqof.la           \
   ${top_builddir}/lib/libsql/libqofsql.la \
   ${LIBXML2_LIBS}                         \
+  ${LIBGDA_LIBS} \
   ${GLIB_LIBS}                            \
   -lltdl
+endif
 
+if USE_LIBGDA
+test_book_merge_LDADD = \
+  ${top_builddir}/qof/qof_book_merge.lo    \
+  ${top_builddir}/backend/file/libqof-backend-qsf.la \
+  ${top_builddir}/qof/libqof.la           \
+  ${LIBXML2_LIBS} \
+  ${LIBGDA_LIBS} \
+  ${GLIB_LIBS}   \
+  -lltdl
+else
 test_book_merge_LDADD = \
   ${top_builddir}/qof/qof_book_merge.lo    \
   ${top_builddir}/backend/file/libqof-backend-qsf.la \
   ${top_builddir}/qof/libqof.la           \
   ${top_builddir}/lib/libsql/libqofsql.la \
   ${LIBXML2_LIBS}                         \
+  ${LIBGDA_LIBS} \
   ${GLIB_LIBS}                            \
   -lltdl
+endif
 
+if USE_LIBGDA
+LDADD =   \
+  ${top_builddir}/qof/libqof.la \
+  ${LIBXML2_LIBS} \
+  ${LIBGDA_LIBS} \
+  ${GLIB_LIBS}   \
+  -lltdl -lm
+else
 LDADD =                                   \
   ${top_builddir}/qof/libqof.la           \
   ${top_builddir}/lib/libsql/libqofsql.la \
   ${LIBXML2_LIBS}                         \
+  ${LIBGDA_LIBS} \
   ${GLIB_LIBS}                            \
   -lltdl -lm
+endif
 
