--- a/qof/examples/gobject/Makefile.am
+++ b/qof/examples/gobject/Makefile.am
@@ -7,12 +7,23 @@ noinst_PROGRAMS =     \
 
 EXTRA_DIST =
 
-
 AM_CFLAGS =           \
 	-I${top_srcdir}/qof \
   ${GTK_CFLAGS}       \
+  ${LIBGDA_CFLAGS} \
   ${GLIB_CFLAGS}
 
+CFLAGS += -Werror
+
+if USE_LIBGDA
+LDADD =  \
+  ${top_builddir}/qof/libqof.la  \
+  ${GTK_LIBS}     \
+  ${LIBXML2_LIBS} \
+  ${GLIB_LIBS}   \
+  ${LIBGDA_LIBS} \
+  -lltdl -lm
+else
 LDADD =                                   \
   ${top_builddir}/qof/libqof.la           \
   ${top_builddir}/lib/libsql/libqofsql.la \
@@ -20,4 +31,5 @@ LDADD =                                   \
   ${LIBXML2_LIBS}                         \
   ${GLIB_LIBS}                            \
   -lltdl -lm
+endif
 
