--- a/qof/backend/file/qsf-dir.h.in
+++ b/qof/backend/file/qsf-dir.h.in
@@ -1,5 +1,5 @@
 /***************************************************************************
- *            qsf-xml.h.in
+ *            qsf-xml.h
  *
  *  Mon Dec 20 20:27:48 2004
  *  Copyright  2004  Neil Williams
@@ -15,11 +15,11 @@
  *  This program is distributed in the hope that it will be useful,
  *  but WITHOUT ANY WARRANTY; without even the implied warranty of
  *  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
- *  GNU Library General Public License for more details.
+ *  GNU General Public License for more details.
  *
  *  You should have received a copy of the GNU General Public License
  *  along with this program; if not, write to the Free Software
  *  Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA 02111-1307, USA.
  */
 
-#define QSF_SCHEMA_DIR "@-QSF_SCHEMA_DIR-@"
+#define QSF_SCHEMA_DIR "@QSF_SCHEMA_DIR@"
