--- a/qof/qof-1.pc.in
+++ b/qof/qof-1.pc.in
@@ -3,11 +3,12 @@ prefix=@prefix@
 exec_prefix=@exec_prefix@
 libdir=@libdir@
 includedir=@includedir@
+xmldir=@QSF_SCHEMA_DIR@
+added_libs=@ADD_PKG_LIB@
 
 Name: QOF
 Description: QOF Query Object Framework Library.
-Requires: glib-2.0 xml2 >= 2-2.5.10
+Requires: glib-2.0 libxml-2.0 >= 2-2.5.10
 Version: @VERSION@
-Libs: -L${libdir} -lqof -lqofsql
+Libs: -L${libdir} -lqof ${added_libs}
 Cflags: -I${includedir}/qof
-
